# OTUS_ALGO_2

./: .gitmodules  CMakeLists.txt  README.md  test_folder_define.h.in
Tests/Pow/: test.2.out  test.3.out  test.4.out  test.5.out
src/: FiboBase.h  FibonacciGoldenRatio.h  FibonacciIterative.h  FibonacciMatrix.h  FibonacciRecursive.h  FibonacciRecursiveMem.h  GCDBase.h  GCD_1.h  GCD_2.h  GCD_3.h  PowBase.h  Pow_1.h  Pow_2.h  Pow_3.h  PrimesBase.h  Primes_1.h  Primes_Opt_1.h  Primes_Opt_2.h  Primes_Opt_3.h  SecondAssignmentFactory.cpp  SecondAssignmentFactory.h  Sieve_1.h  Sieve_2.h  Sieve_3.h  Task.h  TaskFactory.h  TestInputOutputTaker.cpp  TestInputOutputTaker.h  exist_file.h  main.cpp
